# aeroespacial-site-py

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  render.yaml  requirements.txt  vercel.json
app/backend/: settings.py
app/frontend/: package-lock.json  package.json
client/: .prettierrc  README.md  hrm.dev.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.js
client/pages/: _document.html  home.html  login.html
client/pages/includes/components/: menu.html
client/pages/includes/layouts/: home.html  login.html
client/src/: App.vue
client/src/scripts/components/: Alerts.vue  Autocomplete.vue  Badges.vue  Breadcrumb.vue  Button.vue  CardImovel.vue  CardInteresse.vue  LeadCard.vue  Modal.vue  (+4 more)
client/src/styles/: global.scss
docker/: app.dockerfile  nginx.dockerfile  redis.yaml
docs/: DEV_DOCS.md
docs/wordpress_sim/: .eslintrc  .prettierrc  dev.hmr.js  package.json  tailwind.config.js  tsconfig.json  vite.config.js
notebooks/: notebook.ipynb
scripts/: nginx.conf  nginx.sh  poetry.py
server/: config.py
server/controllers/: home_controller.py  login_controller.py  pouso_lunar_controller.py
server/core/context/: context.py
server/core/flask/: flask.py
server/core/logging/: __init__.py
server/core/redis/: __init__.py  redis.py
server/decorators/: context_decorator.py
server/register/: register.py
server/registers/: routes.py
server/resources/: pouso_lunar_resource.py
server/routes/: home.py
server/services/: pouso_lunar.py
tests/: pouso_lunar.py
(+39 files in other folders)
