[tool.poetry]
name = "aeroespacial-site-py"
version = "0.1.0"
description = "HUB Aeroespacial"
authors = ["Lucas Moura de Almeida"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pydash = "^7.0.6"
flask = "^2.3.3"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
